--- a/src/app/guest/guest.component.html
+++ b/src/app/guest/guest.component.html
@@ -1,4 +1,4 @@
-<div class = "wrap"><textarea #postform id="postform" [(ngModel)]="this.display" class="textarea_MD" style="overflow-wrap: break-word; height: 550px; width:750px; " placeholder="Enter markdown here"></textarea>
+<div class = "wrap"><textarea #postform id="postform" [(ngModel)]="this.display" class="textarea_MD" style="overflow-wrap: break-word; height: 550px; width:750px; " placeholder="Enter HTML here"></textarea>
 <div #dialog id="dialog"></div>
 <br>
 <button class="btn" (click)="previewHTML()">Preview HTML</button>
