--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,8 +23,9 @@
   
       <br>
       <button class="btn" (click)="newMD()">New HTML</button>
-      <button class="btn btn-block btn-danger mt-4" (click)="signOut()">Sign out</button>
-  
+      <div class="wrap">
+      <button class="btn run btn-block btn-danger mt-4" (click)="signOut()">Sign out</button>
+    </div>
     </div>
   
   </div>
