--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,8 @@
                class="form-control"
         />
       </div>
-  
+      
+      <div class = "wrap">
       <button class="btn btn-block btn-primary">Login</button>
   
       <br>
@@ -26,8 +27,10 @@
   
       <button class="btn btn-block google-sign-in" (click)="signInHandler()">
         <img [src]="'assets/images/google.svg'" alt="google"/>
-        <span>  Continue with Google</span>
+        <span>Continue with Google</span>
       </button>
+    </div>
+
   
     </div>
   
