--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -6,6 +6,14 @@
     font-size: 16px;
     cursor: pointer;
   }
+.run{
+    width: 40%;
+    display: block;
+    margin:auto;
+}
+.wrap {
+    text-align: center;
+}
 img{
     border: 2px solid rgb(0, 0, 0);
 }
